the style of rightSidebar and leftSidebar ready

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="rightSide.css">
     <title>CV - Dashboard</title>
   </head>
   <body>
@@ -101,6 +102,7 @@
       </div>
     </div>
     <script src="./script/userAccounttoggle.js"></script>
+    <script src="./script/changeContent.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
