star in extra field is changed

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -68,7 +68,7 @@
           </ul>
         </div>
         <div class="Extra">
-          <h3>Explore ⭐</h3>
+          <h3>Explore <ion-icon name="star"></ion-icon></h3>
           <p>
             Here are something that give boost to your carrer in
             <b> IT Field. </b>Top companies offer students some benificial
