the first form is ready in dashboard

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="rightSide.css">
+    <link rel="stylesheet" href="rightSide.css" />
     <title>CV - Dashboard</title>
   </head>
   <body>
@@ -18,7 +18,9 @@
       <nav>
         <div id="logo"><img src="../../Assets/logo/CV.png" alt="" /></div>
         <div class="accountInfo">
-          <button aria-label="Massages"><ion-icon name="mail-unread-outline" id="massage-icon"></ion-icon></button>
+          <button aria-label="Massages">
+            <ion-icon name="mail-unread-outline" id="massage-icon"></ion-icon>
+          </button>
           <div class="UserAccount">
             <img src="../../Assets/images/avatar (1).png" alt="" /> Shreyash
           </div>
@@ -93,12 +95,43 @@
         </div>
       </div>
       <div class="right_sidebar">
-        <div class="welcomeImage">
+        <!-- <div class="welcomeImage">
           <p><img src="../../Assets/svg/undraw_welcoming_re_x0qo-1.svg" alt=""></p>
           <h1>Welcome To Dashboard !</h1>
+        </div> -->
+        <div class="ResumeContainer">
+          <div class="FormSteps">
+            <li><button>1</button></li>
+            <li><button>2</button></li>
+            <li><button>3</button></li>
+            <li><button>4</button></li>
+            <li><button>5</button></li>
+          </div>
+          <div class="resumeForm">
+            <form action="#" id="UserPersonalInfo">
+              <fieldset>
+                <legend>🙋🏻 Personal Information &nbsp;</legend>
+                <input
+                  type="text"
+                  id="firstName"
+                  name="firstName"
+                  placeholder="Fisrt Name"
+                />
+                <input
+                  type="text"
+                  id="lastName"
+                  name="lastName"
+                  placeholder="Last Name"
+                />
+                <input type="text" id="jobRole" name="jobRole" placeholder="Job Role">
+                <input type="email" id="userEmail" name="userEmail" placeholder="Enter Job email">
+                <input type="number" id="userNumber" name="userNumber" placeholder="Phone number">
+                <input type="tel" id="telNumber" name="telNumber" placeholder="Telephone number">
+                <input type="button" value="Next" id="Form1btn">
+              </fieldset>
+            </form>
+          </div>
         </div>
-
-
       </div>
     </div>
     <script src="./script/userAccounttoggle.js"></script>
