data is stored in the localstorage JS is added

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -123,11 +123,31 @@
                   name="lastName"
                   placeholder="Last Name"
                 />
-                <input type="text" id="jobRole" name="jobRole" placeholder="Job Role">
-                <input type="email" id="userEmail" name="userEmail" placeholder="Enter Job email">
-                <input type="number" id="userNumber" name="userNumber" placeholder="Phone number">
-                <input type="tel" id="telNumber" name="telNumber" placeholder="Telephone number">
-                <input type="button" value="Next" id="Form1btn">
+                <input
+                  type="text"
+                  id="jobRole"
+                  name="jobRole"
+                  placeholder="Job Role"
+                />
+                <input
+                  type="email"
+                  id="userEmail"
+                  name="userEmail"
+                  placeholder="Enter Job email"
+                />
+                <input
+                  type="number"
+                  id="userNumber"
+                  name="userNumber"
+                  placeholder="Phone number"
+                />
+                <input
+                  type="tel"
+                  id="telNumber"
+                  name="telNumber"
+                  placeholder="Telephone number"
+                />
+                <input type="button" value="Next" id="Form1btn" />
               </fieldset>
             </form>
           </div>
@@ -136,6 +156,7 @@
     </div>
     <script src="./script/userAccounttoggle.js"></script>
     <script src="./script/changeContent.js"></script>
+    <script src="./script/savingResumeData.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
