--- a/src/accounts/signup/index.html
+++ b/src/accounts/signup/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="main">
         <div class="form">
-            <form action="#">
+            <form action="../../../Backend/signup.php">
                 <input type="text" name="name" id="name" class="" placeholder="Enter Name" autocomplete="off">
                 <input type="email" name="email" id="email" class="" placeholder="Enter Email Id" autocomplete="off">
                 <div>
