Content updated of About us Page

--- a/src/other/aboutUs/index.html
+++ b/src/other/aboutUs/index.html
@@ -41,7 +41,14 @@
       </div>
       <div class="main">
         <h1>An Resume Builder</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque quis iste at. Nostrum deserunt minus, nemo debitis dolore dignissimos accusamus reiciendis, omnis, facere harum ab quod. Porro, illum dicta. Cumque!</p>
+        <p>
+          As in the placement season of most of the colleges,making resume is a hectic work for the candidates.
+          Also many of the companies judge the candidate just by his/her resume.
+          So it is essentian for the students to create an proffessional or the out standing Resume.
+          So our Online resume builder helps you in creating the standard resumes for your job careers.
+          This is the platform where you need to choose an templete and fill the form, our website will generate an proffessional CV for you.
+          Further you can convert it into a PDF and Print it out.
+        </p>
       </div>
     </div>
     <div class="teamSection">
