Modified the main content on welcome page.

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -39,10 +39,8 @@
         <div class="content">
           <h1>Online <span>Resume</span> Builder</h1>
           <p>
-            A CV is the first contact you have with a prospective employer and
-            it is your chance to make a good first impression. You use it to
-            show your prospective employer why they should hire you and what the
-            benefits of having you on their team will be.
+            As we all know Resume plays an important role in case of job search.It is bit difficult for the students to create a professional resume or the CV. 
+            Our online Resume builder is a web application where you can build resume just by filling important credentials.
           </p>
           <a href="../accounts/signup/index.html"
             ><button id="startBtn">Start Now</button></a
