required field is added in resuemForm

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -116,31 +116,36 @@
                   id="firstName"
                   name="firstName"
                   placeholder="Fisrt Name"
-                />
+                  required
+                  />
                 <input
                   type="text"
                   id="lastName"
                   name="lastName"
                   placeholder="Last Name"
-                />
+                  required
+                  />
                 <input
                   type="text"
                   id="jobRole"
                   name="jobRole"
                   placeholder="Job Role"
-                />
+                  required
+                  />
                 <input
                   type="email"
                   id="userEmail"
                   name="userEmail"
                   placeholder="Enter Job email"
-                />
+                  required
+                  />
                 <input
                   type="number"
                   id="userNumber"
                   name="userNumber"
                   placeholder="Phone number"
-                />
+                  required
+                  />
                 <input
                   type="tel"
                   id="telNumber"
