Dashboard content is changing on clicks perfectly

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -95,73 +95,16 @@
         </div>
       </div>
       <div class="right_sidebar">
-        <!-- <div class="welcomeImage">
+        <div class="welcomeImage">
           <p><img src="../../Assets/svg/undraw_welcoming_re_x0qo-1.svg" alt=""></p>
           <h1>Welcome To Dashboard !</h1>
-        </div> -->
-        <div class="ResumeContainer">
-          <div class="FormSteps">
-            <li><button>1</button></li>
-            <li><button>2</button></li>
-            <li><button>3</button></li>
-            <li><button>4</button></li>
-            <li><button>5</button></li>
-          </div>
-          <div class="resumeForm">
-            <form action="#" id="UserPersonalInfo">
-              <fieldset>
-                <legend>🙋🏻 Personal Information &nbsp;</legend>
-                <input
-                  type="text"
-                  id="firstName"
-                  name="firstName"
-                  placeholder="Fisrt Name"
-                  required
-                  />
-                <input
-                  type="text"
-                  id="lastName"
-                  name="lastName"
-                  placeholder="Last Name"
-                  required
-                  />
-                <input
-                  type="text"
-                  id="jobRole"
-                  name="jobRole"
-                  placeholder="Job Role"
-                  required
-                  />
-                <input
-                  type="email"
-                  id="userEmail"
-                  name="userEmail"
-                  placeholder="Enter Job email"
-                  required
-                  />
-                <input
-                  type="number"
-                  id="userNumber"
-                  name="userNumber"
-                  placeholder="Phone number"
-                  required
-                  />
-                <input
-                  type="tel"
-                  id="telNumber"
-                  name="telNumber"
-                  placeholder="Telephone number"
-                />
-                <input type="button" value="Next" id="Form1btn" />
-              </fieldset>
-            </form>
-          </div>
         </div>
       </div>
     </div>
     <script src="./script/userAccounttoggle.js"></script>
     <script src="./script/changeContent.js"></script>
     <script src="./script/savingResumeData.js"></script>
+    <script src="./script/changeFormContent.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
