--- a/src/accounts/signup/index.html
+++ b/src/accounts/signup/index.html
@@ -1,48 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../../Assets/logo/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../../../Assets/logo/favicon.jpg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>CV - Sign Up</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="header">
-        <nav>
-            <div id="logo"><img src="../../../Assets/logo/CV.png" alt=""></div>
-            <div class="links">
-                <ul>
-                    <li><a href="../../welcomePage/index.html">Home</a></li>
-                    <li><a href="../../other/aboutUs/index.html">About</a></li>
-                    <li><a href="../../other/contactUs/index.html">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
+      <nav>
+        <div id="logo"><img src="../../../Assets/logo/CV.png" alt="" /></div>
+        <div class="links">
+          <ul>
+            <li><a href="../../welcomePage/index.html">Home</a></li>
+            <li><a href="../../other/aboutUs/index.html">About</a></li>
+            <li><a href="../../other/contactUs/index.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
     </div>
     <div class="main">
-        <div class="form">
-            <form action="../../../Backend/signup.php">
-                <input type="text" name="name" id="name" class="" placeholder="Enter Name" autocomplete="off">
-                <input type="email" name="email" id="email" class="" placeholder="Enter Email Id" autocomplete="off">
-                <div>
-                    <input type="password" name="password" id="password" placeholder="Enter Password"
-                        autocomplete="off">
-                    <img src="../../../Assets/svg/eye-solid.svg" alt="">
-                </div>
-                <div>
-                    <input type="password" name="password2" id="password2" class="" placeholder="Confirm Password" autocomplete="off">
-                    <img src="../../../Assets/svg/eye-solid.svg" alt="">
-                </div>
-                <input type="submit" id="form_btn">
-            </form>
-            <p>Already have an account? <a href="../signin/index.html">Sign In</a></p>
-        </div>
+      <div class="form">
+        <form action="#">
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class=""
+            placeholder="Enter Name"
+            autocomplete="off"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class=""
+            placeholder="Enter Email Id"
+            autocomplete="off"
+          />
+          <div>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Enter Password"
+              autocomplete="off"
+            />
+            <img src="../../../Assets/svg/eye-solid.svg" alt="" />
+          </div>
+          <div>
+            <input
+              type="password"
+              name="password2"
+              id="password2"
+              class=""
+              placeholder="Confirm Password"
+              autocomplete="off"
+            />
+            <img src="../../../Assets/svg/eye-solid.svg" alt="" />
+          </div>
+          <input type="submit" id="form_btn" />
+        </form>
+        <p>
+          Already have an account? <a href="../signin/index.html">Sign In</a>
+        </p>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
