The data is stoared and displayed to dashboard

--- a/src/accounts/signup/index.html
+++ b/src/accounts/signup/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="main">
       <div class="form">
-        <form action="#">
+        <form action="../../dashboard/index.html">
           <input
             type="text"
             name="name"
@@ -36,6 +36,7 @@
             class=""
             placeholder="Enter Name"
             autocomplete="off"
+            required
           />
           <input
             type="email"
@@ -44,6 +45,7 @@
             class=""
             placeholder="Enter Email Id"
             autocomplete="off"
+            required
           />
           <div>
             <input
@@ -52,6 +54,7 @@
               id="password"
               placeholder="Enter Password"
               autocomplete="off"
+              required
             />
             <img src="../../../Assets/svg/eye-solid.svg" alt="" />
           </div>
@@ -63,6 +66,7 @@
               class=""
               placeholder="Confirm Password"
               autocomplete="off"
+              required
             />
             <img src="../../../Assets/svg/eye-solid.svg" alt="" />
           </div>
