--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -22,10 +22,10 @@
             <ion-icon name="mail-unread-outline" id="massage-icon"></ion-icon>
           </button>
           <div class="UserAccount">
-            <img src="../../Assets/images/avatar (1).png" alt="" /> Shreyash
+            <img src="../../Assets/images/avatar (1).png" alt="" /> <p id="UserName"> Shreyash </p>
           </div>
           <div class="UserAccounthidden" id="UserAccountBox">
-            <p>Welcome, Shreyash</p>
+            <p id="UserWelcome" style="font-size: 18px;"></p>
             <hr />
             <div class="links">
               <ul>
