default name is chaged

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -22,7 +22,7 @@
             <ion-icon name="mail-unread-outline" id="massage-icon"></ion-icon>
           </button>
           <div class="UserAccount">
-            <img src="../../Assets/images/avatar (1).png" alt="" /> <p id="UserName"> Shreyash </p>
+            <img src="../../Assets/images/avatar (1).png" alt="" /> <p id="UserName"> </p>
           </div>
           <div class="UserAccounthidden" id="UserAccountBox">
             <p id="UserWelcome" style="font-size: 18px;"></p>
