all form are created

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="rightSide.css" />
-    <title>CV - Dashboard</title>
+    <title></title>
   </head>
   <body>
     <div class="header">
@@ -22,10 +22,11 @@
             <ion-icon name="mail-unread-outline" id="massage-icon"></ion-icon>
           </button>
           <div class="UserAccount">
-            <img src="../../Assets/images/avatar (1).png" alt="" /> <p id="UserName"> </p>
+            <img src="../../Assets/images/avatar (1).png" alt="" />
+            <p id="UserName"></p>
           </div>
           <div class="UserAccounthidden" id="UserAccountBox">
-            <p id="UserWelcome" style="font-size: 18px;"></p>
+            <p id="UserWelcome" style="font-size: 18px"></p>
             <hr />
             <div class="links">
               <ul>
@@ -90,7 +91,7 @@
             <a href="#"><img src="../../Assets/svg/mail.svg" alt="" /></a>
           </div>
           <div id="copyright" style="margin-top: 20px">
-            <p>&copy; Curriculum Vitae 2023.</p>
+            <p>&copy; myResumeBuilder</p>
           </div>
         </div>
       </div>
