Alpha next btn of all resume forms are working

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -106,6 +106,7 @@
     <script src="./script/changeContent.js"></script>
     <script src="./script/savingResumeData.js"></script>
     <script src="./script/changeFormContent.js"></script>
+    <script src="./script/resumeFormFunction.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
