--- a/src/other/aboutUs/index.html
+++ b/src/other/aboutUs/index.html
@@ -52,7 +52,45 @@
       </div>
     </div>
     <div class="teamSection">
-
+      <div class="card">
+        <img src="s.jpg" alt="shreyashimg" style="width:100%">
+        <h2>Shreyash Patil</h2>
+        <p class="title">BCA</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <div style="margin: 24px 0;">
+          <a href="#"><i class="#"></i></a> 
+          <a href="#"><i class="#"></i></a>  
+          <a href="#"><i class="#"></i></a>  
+          <a href="#"><i class="#"></i></a> 
+        </div>
+        <p><button>Contact</button></p>
+      </div>
+      <div class="card">
+        <img src="s.jpg" alt="shreyashimg" style="width:100%">
+        <h2>Umair Borkar</h2>
+        <p class="title">BCA</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <div style="margin: 24px 0;">
+          <a href="#"><i class="#"></i></a> 
+          <a href="#"><i class="#"></i></a>  
+          <a href="#"><i class="#"></i></a>  
+          <a href="#"><i class="#"></i></a> 
+        </div>
+        <p><button>Contact</button></p>
+      </div>
+      <div class="card">
+        <img src="s.jpg" alt="shreyashimg" style="width:100%">
+        <h2>Vasim Mhaldar</h2>
+        <p class="title">BCA</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <div style="margin: 24px 0;">
+          <a href="#"><i class="#"></i></a> 
+          <a href="#"><i class="#"></i></a>  
+          <a href="#"><i class="#"></i></a>  
+          <a href="#"><i class="#"></i></a> 
+        </div>
+        <p><button>Contact</button></p>
+      </div>
     </div>
     <div class="footer">
       <div class="fotterInfo">
