path to php files are given to index files

--- a/src/accounts/signup/index.html
+++ b/src/accounts/signup/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="main">
       <div class="form">
-        <form action="../../dashboard/index.html">
+        <form action="../../../Backend/signup.php" method="post">
           <input
             type="text"
             name="name"
