--- a/src/other/contactUs/index.html
+++ b/src/other/contactUs/index.html
@@ -32,7 +32,7 @@
                 <img src="../../../Assets/svg/undraw_feedback_re_urmj.svg" alt="">
             </div>
             <div class="form">
-                <form action="#">
+                <form action="../../../Backend/contact.php" method="post">
                     <input type="text" name="subject" id="subject" placeholder="Enter the Subject">
                     <input type="text" name="userName" id="userName" placeholder="Enter Full Name">
                     <input type="email" name="email" id="email" placeholder="Enter Email Id">
