required attribute is added to all input fields

--- a/src/other/contactUs/index.html
+++ b/src/other/contactUs/index.html
@@ -33,10 +33,10 @@
             </div>
             <div class="form">
                 <form action="../../../Backend/contact.php" method="post">
-                    <input type="text" name="subject" id="subject" placeholder="Enter the Subject">
-                    <input type="text" name="userName" id="userName" placeholder="Enter Full Name">
-                    <input type="email" name="email" id="email" placeholder="Enter Email Id">
-                    <textarea name="query" id="query" cols="30" rows="5" placeholder="Tell us, how we can help you ?"></textarea>
+                    <input type="text" name="subject" id="subject" placeholder="Enter the Subject" required>
+                    <input type="text" name="name" id="name" placeholder="Enter Full Name" required>
+                    <input type="email" name="email" id="email" placeholder="Enter Email Id" required>
+                    <textarea name="description" id="description" cols="30" rows="5" placeholder="Tell us, how we can help you ?" required></textarea>
                     <input type="submit" id="contact_btn" value="Send">
                 </form>
             </div>
