user profile card are created

--- a/src/other/aboutUs/index.html
+++ b/src/other/aboutUs/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="teamSection">
       <div class="card">
-        <img src="s.jpg" alt="shreyashimg" style="width:100%">
+        <img src=".jpg" alt="shreyashimg" style="width:100%">
         <h2>Shreyash Patil</h2>
         <p class="title">BCA</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -63,10 +63,10 @@
           <a href="#"><i class="#"></i></a>  
           <a href="#"><i class="#"></i></a> 
         </div>
-        <p><button>Contact</button></p>
+        <p><button class="button">Contact</button></p>
       </div>
       <div class="card">
-        <img src="s.jpg" alt="shreyashimg" style="width:100%">
+        <img src=".jpg" alt="umairimg" style="width:100%">
         <h2>Umair Borkar</h2>
         <p class="title">BCA</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -76,10 +76,10 @@
           <a href="#"><i class="#"></i></a>  
           <a href="#"><i class="#"></i></a> 
         </div>
-        <p><button>Contact</button></p>
+        <p><button class="button">Contact</button></p>
       </div>
       <div class="card">
-        <img src="s.jpg" alt="shreyashimg" style="width:100%">
+        <img src=".jpg" alt="vasim" style="width:100%">
         <h2>Vasim Mhaldar</h2>
         <p class="title">BCA</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -89,7 +89,7 @@
           <a href="#"><i class="#"></i></a>  
           <a href="#"><i class="#"></i></a> 
         </div>
-        <p><button>Contact</button></p>
+        <p><button class="button">Contact</button></p>
       </div>
     </div>
     <div class="footer">
