signup page connect with database and working

--- a/src/accounts/signup/index.html
+++ b/src/accounts/signup/index.html
@@ -28,6 +28,8 @@
     </div>
     <div class="main">
       <div class="form">
+        <p id="emailError" class="mailInactive">Email is already in use 😕</p>
+        <p id="passError" class="passInactive">Password does not match 😒</p>
         <form action="../../../Backend/signup.php" method="post">
           <input
             type="text"
