--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -100,6 +100,7 @@
   <script src="./script/changeFormContent.js"></script>
   <script src="./script/resumeFormFunction.js"></script>
   <script src="./script/massage.js"></script>
+  <script src="./script/app.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
