--- a/src/resumeLayouts/layout2/index.html
+++ b/src/resumeLayouts/layout2/index.html
@@ -1,248 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../../../Assets/logo/favicon.jpg" type="image/x-icon">
-    <title>create@CV</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "poppins", sans-serif;
-      }
 
-      @media print {
-        body {
-          -webkit-print-color-adjust: exact;
-          print-color-adjust: exact;
-        }
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="../../../Assets/logo/favicon.jpg" type="image/x-icon">
+  <title>create@CV</title>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 
-      a {
-        text-decoration: none;
-        color: inherit;
-      }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "poppins", sans-serif;
+    }
 
-      ul,
-      ol,
-      li {
-        list-style: none;
-      }
-
+    @media print {
       body {
-        background: lightblue;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
       }
+    }
 
-      .container {
-        position: relative;
-        width: 100%;
-        max-width: 1000px;
-        min-height: 1000px;
-        background: #fff;
-        margin: 50px;
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        box-shadow: 0 35px rbg(0, 0, 0, 0.1);
-      }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
 
-      .container .left_side {
-        position: relative;
-        background: #003147;
-        padding: 40px;
-      }
+    ul,
+    ol,
+    li {
+      list-style: none;
+    }
 
-      .portfoliotext {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 20px;
-        border-bottom: 1px solid rbga(255, 255, 255, 0.2);
-      }
+    .container {
+      position: relative;
+      width: 100%;
+      max-width: 1000px;
+      min-height: 1414px;
+      background: #fff;
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      box-shadow: 0 35px rbg(0, 0, 0, 0.1);
+      overflow: hidden;
+    }
 
-      .portfoliotext .imgbox {
-        position: relative;
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        overflow: hidden;
-      }
+    .container .left_side {
+      position: relative;
+      background: #003147;
+      padding: 40px;
+    }
 
-      .portfoliotext .imgbox img {
-        width: 300px;
-        height: 300px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+    .portfoliotext {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 20px;
+      border-bottom: 1px solid rbga(255, 255, 255, 0.2);
+    }
 
-      .portfoliotext h2 {
-        color: white;
-        font-size: 1.5em;
-        margin-top: 20px;
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: 600;
-        line-height: 1.4em;
-      }
+    .portfoliotext .imgbox {
+      position: relative;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      overflow: hidden;
+    }
 
-      .portfoliotext h2 span {
-        font-size: 0.8em;
-        font-weight: 300;
-      }
+    .portfoliotext .imgbox img {
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-      .contactinfo {
-        padding-top: 40px;
-      }
+    .portfoliotext h2 {
+      color: white;
+      font-size: 1.5em;
+      margin-top: 20px;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 600;
+      line-height: 1.4em;
+    }
 
-      .title {
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: 600;
-        letter-spacing: 1px;
-        margin-bottom: 20px;
-      }
+    .portfoliotext h2 span {
+      font-size: 0.8em;
+      font-weight: 300;
+    }
 
-      .contactinfo ul {
-        position: relative;
-      }
+    .contactinfo {
+      padding-top: 40px;
+    }
 
-      .contactinfo ul li {
-        position: relative;
-        list-style: none;
-        margin: 10px 0;
-        cursor: pointer;
-      }
+    .title {
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: 600;
+      letter-spacing: 1px;
+      margin-bottom: 20px;
+    }
 
-      .contactinfo ul li .icon {
-        display: inline-block;
-        width: 30px;
-        font-size: 18px;
-        color: #03a9f4;
-      }
+    .contactinfo ul {
+      position: relative;
+    }
 
-      .contactinfo ul li span {
-        color: #fff;
-        font-weight: 300;
-      }
+    .contactinfo ul li {
+      position: relative;
+      list-style: none;
+      margin: 10px 0;
+      cursor: pointer;
+    }
 
-      .contactinfo.education li {
-        margin-bottom: 15px;
-      }
+    .contactinfo ul li .icon {
+      display: inline-block;
+      width: 30px;
+      font-size: 18px;
+      color: #03a9f4;
+    }
 
-      .contactinfo.education h5 {
-        color: #03a9f4;
-        font-weight: 700;
-      }
+    .contactinfo ul li span {
+      color: #fff;
+      font-weight: 300;
+    }
 
-      .contactinfo.education h4:nth-child(2) {
-        color: #fff;
-        font-weight: 600;
-      }
+    .contactinfo.education li {
+      margin-bottom: 15px;
+    }
 
-      .contactinfo.education h4 {
-        color: #fff;
-        font-weight: 300;
-      }
+    .contactinfo.education h5 {
+      color: #03a9f4;
+      font-weight: 700;
+    }
 
-      .container .right_side {
-        position: relative;
-        background: #fff;
-        padding: 40px;
-      }
-      .about {
-        margin-bottom: 50px;
-      }
+    .contactinfo.education h4:nth-child(2) {
+      color: #fff;
+      font-weight: 600;
+    }
 
-      .about:last-child {
-        margin-bottom: 0;
-      }
-      .title2 {
-        color: #003147;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        margin-bottom: 10px;
-      }
-      p {
-        color: #333;
-      }
+    .contactinfo.education h4 {
+      color: #fff;
+      font-weight: 300;
+    }
 
-      .about .box {
-        margin: 20px 0;
-      }
+    .container .right_side {
+      position: relative;
+      background: #fff;
+      padding: 40px;
+    }
 
-      .about .box .year_company {
-        min-width: 15opx;
-      }
+    .about {
+      margin-bottom: 50px;
+    }
 
-      .about .box .year_company h5 {
-        text-transform: uppercase;
-        color: #848c90;
-        font-weight: 600;
-      }
+    .about:last-child {
+      margin-bottom: 0;
+    }
 
-      .about .box .text h4 {
-        text-transform: uppercase;
-        color: #2a7da2;
-        font-size: 16px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="left_side">
-        <div class="portfoliotext">
-          <div class="imgbox"></div>
-        </div>
+    .title2 {
+      color: #003147;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin-bottom: 10px;
+    }
 
-        <div class="contactinfo">
-          <h3 class="title">Contact info</h3>
-          <ul></ul>
-        </div>
+    p {
+      color: #333;
+    }
 
-        <div class="contactinfo education">
-          <h3 class="title">Education</h3>
-          <ul></ul>
-        </div>
+    .about .box {
+      margin: 20px 0;
+    }
 
-        <div class="contactinfo Languages">
-          <h3 class="title">languages</h3>
-          <ul></ul>
-        </div>
+    .about .box .year_company {
+      min-width: 15opx;
+    }
+
+    .about .box .year_company h5 {
+      text-transform: uppercase;
+      color: #848c90;
+      font-weight: 600;
+    }
+
+    .about .box .text h4 {
+      text-transform: uppercase;
+      color: #2a7da2;
+      font-size: 16px;
+    }
+
+    .printcontent {
+      padding: 2rem;
+    }
+
+    .printcontent p {
+      font-size: 20px;
+      color: red;
+    }
+
+    .printcontent button {
+      padding: 12px 20px;
+      border: none;
+      outline: none;
+      background: #2a7da2;
+      cursor: pointer;
+      margin-top: .7rem;
+      font-weight: 600;
+    }
+    #skillList {
+      display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="printcontent">
+    <p>*Note : Please check and change the ranges available in skills and languages section on your resume</p>
+    <button onclick="PrintPDF()">Click to Download</button>
+  </div>
+  <div class="container">
+    <div class="left_side">
+      <div class="portfoliotext">
+        <div class="imgbox"></div>
       </div>
 
-      <div class="right_side">
-        <div class="about">
-          <h2 class="title2">Profile</h2>
-        </div>
-        <div class="about experience">
-          <h2 class="title2">Experience</h2></div>
+      <div class="contactinfo">
+        <h3 class="title">Contact info</h3>
+        <ul></ul>
+      </div>
 
-        <div class="about skills">
-          <h2 class="title2">professional Skills</h2>
+      <div class="contactinfo education">
+        <h3 class="title">Education</h3>
+        <ul></ul>
+      </div>
+
+      <div class="contactinfo Languages">
+        <h3 class="title">languages</h3>
+        <ul></ul>
+      </div>
+    </div>
+
+    <div class="right_side">
+      <div class="about">
+        <h2 class="title2">Profile</h2>
+      </div>
+      <div class="about experience">
+        <h2 class="title2">Experience</h2>
+      </div>
+
+      <div class="about skills">
+        <h2 class="title2">professional Skills</h2>
+        <div id="skillList">
+
         </div>
       </div>
     </div>
-    <script src="app.js"></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-  </body>
+  </div>
+  <script src="app.js"></script>
+  <script>
+    function PrintPDF() {
+      let printcontent = document.querySelector('.printcontent');
+      printcontent.style.display = 'none';
+      if (!window.print()) {
+        printcontent.style.display = 'block';
+      }
+      else {
+        localStorage.clear();
+        window.location.href = '../../dashboard/index.html';
+      }
+    }
+  </script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
